# config/socket/handlers/joinRoom.handler.js
@@ -1,7 +1,6 @@
 module.exports = (socket, io) => {
-    socket.on("join_room", (roomName) => {
-        socket.join(roomName);
-        socket.roomsJoined.add(roomName);
-        io.to(roomName).emit("room_message", `${socket.id} joined ${roomName}`);
+    socket.on("join_session", (sessionId) => {
+      socket.join(sessionId);
+      console.log(`Socket ${socket.id} joined session ${sessionId}`);
     });
 };
